Name:                cabal-browser
Version:             0.1
Synopsis:            Local haskell packages browser
Description:         Browse local haskell package documentation.
License:             BSD3
License-file:        LICENSE
Author:              Vincent Hanquez
Maintainer:          vincent@snarc.org
Category:            Documentation
Build-Type:          Simple
Cabal-Version:       >=1.6

Executable cabal-browser
  Main-Is:           Browser.hs
  Build-depends:     base >= 3 && < 5
                   , gtk
                   , webkit
                   , process
                   , containers
                   , directory
                   , mtl
  Buildable:         True
